# bess-model

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.example.yaml  docker-compose.yml  main.py  pyproject.toml  render.yaml  wsgi.py
.cursor/plans/: auto_simulation_and_battery_sizing_3e92b846.plan.md  bess_readme_tasks_plan_4d519794.plan.md
bess_model/: __init__.py  config.py  main.py  profile_templates.py  results.py  sizing.py  workbook_export.py
bess_model/battery/: __init__.py
bess_model/core/: pipeline.py
bess_model/data/: loaders.py  preprocessing.py
bess_model/flows/: section_outputs.py
bess_model/sizing/: __init__.py  optimizer.py
bess_model/web/: __init__.py  app.py  services.py
bess_model/web/static/: app.css  app.js
bess_model/web/templates/: base.html  config.html  dashboard.html  data.html  editor.html  output.html
docs/: Profile_PLAN.md  README.md  api-reference.md  architecture.md  configuration.md  development.md  simulation.md  web-ui.md
tests/: test_integration.py  test_loaders.py  test_optimizer.py  test_pipeline.py  test_preprocessing.py  test_section_outputs.py  test_tender_profiles.py  test_web_app.py  test_workbook_export.py
